--- a/index.html
+++ b/index.html
@@ -4,9 +4,145 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FishEye</title>
+    <link rel="stylesheet" href="stylesheets/style.css">
+    <title>Fisheye</title>
 </head>
 <body>
+    <header>
+        <a href="index.html">
+        <img src="images/logo.png" alt="Fisheye Home Page"></a>
+        <nav aria-label="photographer categories">
+            <a class="link_style" href="">#Portrait</a>
+            <a class="link_style" href="">#Art</a>
+            <a class="link_style" href="">#Fashion</a>
+            <a class="link_style" href="">#Architecture</a>
+            <a class="link_style" href="">#Travel</a>
+            <a class="link_style" href="">#Sport</a>
+            <a class="link_style" href="">#Animals</a>
+            <a class="link_style" href="">#Events</a>
+        </nav>
+        <h1>Nos photographes</h1>
+    </header>
+
+    <main>
+        <a href="">Passer au contenu</a>
+        <div class="container">
+
+            <div class="container__photographer">
+                <div class="container__name">
+                    <a class="link_photographer" href="">
+                        <img src="images/Mimi/Portrait_Nora.jpg" alt="">
+                        <h2>Mimi Keel</h2>
+                    </a>
+                </div>    
+                <div class="text">
+                    <p class="text_location">London, UK</p>
+                    <p class="text_description">Voir le beau dans le quotidien</p>
+                    <p class="text_price">400€/jour</p>
+                </div>
+                <div class="link_tag">
+                    <a class="link_style" href="">#portrait</a>
+                    <a class="link_style" href="">#events</a>
+                    <a class="link_style" href="">#travel</a>
+                    <a class="link_style" href="">#animals</a>
+                </div>
+            </div>
+
+            <div class="container__photographer">
+                <div class="container__name">
+                    <a class="link_photographer" href="">
+                        <img src="images/Ellie_Rose/Architecture_Horseshoe.jpg" alt="">
+                        <h2>Ellie-Rose Wilkens</h2>
+                    </a>
+                </div>
+                <div class="text">
+                    <p class="text_location">Paris, France</p>
+                    <p class="text_description">Travaille sur des compositions complexes</p>
+                    <p class="text_price">250€/jour</p>
+                </div>
+                <div class="link_tag">
+                    <a class="link_style" href="">#sport</a>
+                    <a class="link_style" href="">#architecture</a>
+                </div>
+            </div>
+
+            <div class="container__photographer">
+                <div class="container__name">
+                    <a class="link_photographer" href="">
+                        <img src="images/Tracy/Fashion_Urban_Jungle.jpg" alt="">
+                        <h2>Tracy Galindo</h2>
+                    </a>
+                </div>
+                <div class="text">    
+                    <p class="text_location">Montreal, Canada</p>
+                    <p class="text_description">Photographe freelance</p>
+                    <p class="text_price">500€/jour</p>
+                </div>
+                <div class="link_tag">
+                    <a class="link_style" href="">#art</a>
+                    <a class="link_style" href="">#fashion</a>
+                    <a class="link_style" href="">#events</a>
+                </div>
+            </div>
+
+            <div class="container__photographer">
+                <div class="container__name">
+                    <a class="link_photographer" href="">
+                        <img src="images/Nabeel/Travel_Outdoor_Baths.jpg" alt="">
+                        <h2>Nabeel Bradford</h2>
+                    </a>
+                </div>
+                <div class="text">    
+                    <p class="text_location">Mexico City, Mexico</p>
+                    <p class="text_description">Je vais toujours de l’avant</p>
+                    <p class="text_price">350€/jour</p>
+                </div>
+                <div class="link_tag">
+                    <a class="link_style" href="">#travel</a>
+                    <a class="link_style" href="">#portrait</a>
+                </div>
+            </div>
+
+            <div class="container__photographer">
+                <div class="container__name">
+                    <a class="link_photographer" href="">
+                        <img src="images/Rhode/Fashion_Melody_Red_on_Stripes.jpg" alt="">
+                        <h2>Rhode Dubois</h2>
+                    </a>
+                </div>
+                <div class="text">
+                    <p class="text_location">Barcelona, Spain</p>
+                    <p class="text_description">Créatrice de souvenis</p>
+                    <p class="text_price">375€/jour</p>
+                </div>
+                <div class="link_tag">
+                    <a class="link_style" href="">#sport</a>
+                    <a class="link_style" href="">#fashion</a>
+                    <a class="link_style" href="">#events</a>
+                    <a class="link_style" href="">#animals</a>
+                </div>
+            </div>
+
+            <div class="container__photographer">
+                <div class="container__name">
+                    <a class="link_photographer" href="">
+                        <img src="images/Marcel/Travel_Tower.jpg" alt="">
+                        <h2>Marcel Nikolic</h2>
+                    </a>
+                </div>
+                <div class="text">
+                    <p class="text_location">Berlin, Germany </p>
+                    <p class="text_description">Toujours à la recherche de LA photo</p>
+                    <p class="text_price">300€/jour</p>
+                </div>
+                <div class="link_tag">
+                    <a class="link_style" href="">#travel</a>
+                    <a class="link_style" href="">#architecture</a>
+                </div>
+            </div>
+
+        </div>
+    </main>
     
 </body>
 </html>
