Intégration CSS (Home Page)

--- a/index.html
+++ b/index.html
@@ -5,33 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheets/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
     <title>Fisheye</title>
 </head>
 <body>
     <header>
-        <a href="index.html">
-        <img src="images/logo.png" alt="Fisheye Home Page"></a>
-        <nav aria-label="photographer categories">
-            <a class="link_style" href="">#Portrait</a>
-            <a class="link_style" href="">#Art</a>
-            <a class="link_style" href="">#Fashion</a>
-            <a class="link_style" href="">#Architecture</a>
-            <a class="link_style" href="">#Travel</a>
-            <a class="link_style" href="">#Sport</a>
-            <a class="link_style" href="">#Animals</a>
-            <a class="link_style" href="">#Events</a>
-        </nav>
-        <h1>Nos photographes</h1>
+        <div class="header_align">
+            <a class="logo" href="index.html">
+                <img src="images/logo.png" alt="Fisheye Home Page">
+            </a>
+                <nav aria-label="photographer categories">
+                    <a class="link_style" href="">#Portrait</a>
+                    <a class="link_style" href="">#Art</a>
+                    <a class="link_style" href="">#Fashion</a>
+                    <a class="link_style" href="">#Architecture</a>
+                    <a class="link_style" href="">#Travel</a>
+                    <a class="link_style" href="">#Sport</a>
+                    <a class="link_style" href="">#Animals</a>
+                    <a class="link_style" href="">#Events</a>
+                </nav>
+        </div>
+        <div class="block_title">
+            <h1>Nos photographes</h1>
+        </div>
     </header>
 
     <main>
-        <a href="">Passer au contenu</a>
+        <a class="link_hidden" href="">Passer au contenu</a>
         <div class="container">
 
-            <div class="container__photographer">
+            <section class="container__photographer">
                 <div class="container__name">
                     <a class="link_photographer" href="">
-                        <img src="images/Mimi/Portrait_Nora.jpg" alt="">
+                        <img class="image_profil" src="images/Mimi/Portrait_Nora.jpg" alt="">
                         <h2>Mimi Keel</h2>
                     </a>
                 </div>    
@@ -46,12 +53,12 @@
                     <a class="link_style" href="">#travel</a>
                     <a class="link_style" href="">#animals</a>
                 </div>
-            </div>
+            </section>
 
-            <div class="container__photographer">
+            <section class="container__photographer">
                 <div class="container__name">
                     <a class="link_photographer" href="">
-                        <img src="images/Ellie_Rose/Architecture_Horseshoe.jpg" alt="">
+                        <img class="image_profil" src="images/Ellie_Rose/Architecture_Horseshoe.jpg" alt="">
                         <h2>Ellie-Rose Wilkens</h2>
                     </a>
                 </div>
@@ -64,12 +71,12 @@
                     <a class="link_style" href="">#sport</a>
                     <a class="link_style" href="">#architecture</a>
                 </div>
-            </div>
+            </section>
 
-            <div class="container__photographer">
+            <section class="container__photographer">
                 <div class="container__name">
                     <a class="link_photographer" href="">
-                        <img src="images/Tracy/Fashion_Urban_Jungle.jpg" alt="">
+                        <img class="image_profil" src="images/Tracy/Fashion_Urban_Jungle.jpg" alt="">
                         <h2>Tracy Galindo</h2>
                     </a>
                 </div>
@@ -83,12 +90,12 @@
                     <a class="link_style" href="">#fashion</a>
                     <a class="link_style" href="">#events</a>
                 </div>
-            </div>
+            </section>
 
-            <div class="container__photographer">
+            <section class="container__photographer">
                 <div class="container__name">
                     <a class="link_photographer" href="">
-                        <img src="images/Nabeel/Travel_Outdoor_Baths.jpg" alt="">
+                        <img class="image_profil" src="images/Nabeel/Travel_Outdoor_Baths.jpg" alt="">
                         <h2>Nabeel Bradford</h2>
                     </a>
                 </div>
@@ -101,12 +108,12 @@
                     <a class="link_style" href="">#travel</a>
                     <a class="link_style" href="">#portrait</a>
                 </div>
-            </div>
+            </section>
 
-            <div class="container__photographer">
+            <section class="container__photographer">
                 <div class="container__name">
                     <a class="link_photographer" href="">
-                        <img src="images/Rhode/Fashion_Melody_Red_on_Stripes.jpg" alt="">
+                        <img class="image_profil" src="images/Rhode/Fashion_Melody_Red_on_Stripes.jpg" alt="">
                         <h2>Rhode Dubois</h2>
                     </a>
                 </div>
@@ -121,12 +128,12 @@
                     <a class="link_style" href="">#events</a>
                     <a class="link_style" href="">#animals</a>
                 </div>
-            </div>
+            </section>
 
-            <div class="container__photographer">
+            <section class="container__photographer">
                 <div class="container__name">
                     <a class="link_photographer" href="">
-                        <img src="images/Marcel/Travel_Tower.jpg" alt="">
+                        <img class="image_profil" src="images/Marcel/Travel_Tower.jpg" alt="">
                         <h2>Marcel Nikolic</h2>
                     </a>
                 </div>
@@ -139,10 +146,9 @@
                     <a class="link_style" href="">#travel</a>
                     <a class="link_style" href="">#architecture</a>
                 </div>
-            </div>
+            </section>
 
         </div>
     </main>
-    
 </body>
 </html>
