GET Photographers list

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         <a class="link_hidden" href="">Passer au contenu</a>
         <div class="container">
 
-            <section class="container__photographer">
+
+            <!--<section class="container__photographer">
                 <div class="container__name">
                     <a class="link_photographer" href="">
                         <img class="image_profil" src="images/Mimi/Portrait_Nora.jpg" alt="">
@@ -146,10 +147,10 @@
                     <a class="link_style" href="">#travel</a>
                     <a class="link_style" href="">#architecture</a>
                 </div>
-            </section>
+            </section>-->
 
         </div>
     </main>
-    <script src="js/json/app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
