--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <img src="images/logo.png" alt="Fisheye Home Page">
             </a>
                 <nav aria-label="photographer categories">
-                    <ul class="headerFilters" id="header__filters">
+                    <ul class="headerFilters filtersAlign" id="header__filters">
                     </ul>
                 </nav>
         </div>
